--- a/references.bib
+++ b/references.bib
@@ -468,7 +468,8 @@ isbn="978-3-319-17091-6"
   title={Scrum Guide: The Definitive Guide to Scrum: The Rules of the Game},
   author={Schwaber, Ken and Sutherland, Jeff},
   year={2020},
-  publisher={Scrum.org}
+  publisher={Scrum.org},
+  url={https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-US.pdf}
 }
 
 @article{openagile2019roles,
