--- a/project.tex
+++ b/project.tex
@@ -346,8 +346,6 @@ between, fostering a regular, predictable rhythm of work\nocite{cobb2015scrum}.
 % TODO: rewrite in TikZ
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{images/scrum.png}
-
     \begin{tikzpicture}[%
         font=\LARGE,
         every label/.style={font=\footnotesize},
@@ -360,19 +358,29 @@ between, fostering a regular, predictable rhythm of work\nocite{cobb2015scrum}.
 
       \draw[-Stealth] (backlog) -- (sbacklog) node[midway, above, font=\footnotesize] {sprint planning};
 
-      % A circlying arrow
       \draw[-Stealth, very thick] (sbacklog.east)
         to[out=0, in=180] (5.6, -1.5)
         to[out=0, in=0] (5.6, 0.5)
         to[out=0, in=0] (5, 0.5)
-        to[out=180, in=130] (5, -1.4);
+        to[out=180, in=130] (4.7, -1.4);
 
       \node[font=\footnotesize] at (5.2, -0.5) {sprint};
 
-      % Scrum master on top of sprint
       \node[align=center, label=above:scrum master] (sm) at (4.2, 0.8) {\faUser};
 
       \draw[-Stealth, very thick] (6, -1.5) -- (7, -1.5);
+
+      \draw[-Stealth] (5.7, 0.6)
+        to[out=120, in=200] (5.8, 1)
+        to[out=20, in=160] (6.2, 1)
+        to[out=-20, in=20] (6, 0.3);
+
+      \node[draw, rectangle, dashed, align=center, label=below:daily scrum] (daily) at (7, 2) {\faUser \faUsers};
+      \draw[-] (daily.south west) -- (6, 0.8);
+
+      \node[draw, rectangle, dashed, align=center, label=above:sprint review] (review) at (8, 0) {\faUser~\faUsers};
+      \node[draw, rectangle, dashed, align=center, label=above:incremental version] (version) at (8, -1.3) {\faBox~\faUserTie};
+      \node[draw, rectangle, dashed, align=center, label=above:sprint retrospective] (retrospective) at (8, -2.6) {\faUserTie~\faUser~\faUsers};
 
     \end{tikzpicture}
     \caption{
