--- a/project.tex
+++ b/project.tex
@@ -308,7 +308,7 @@ and adapt, making Scrum a responsive and resilient framework\footfullcite{dennin
 
 \subsection{Scrum roles}
 
-Scrum defines three critical roles: the product owner, the scrum master, and the
+Scrum defines three critical roles: the product owner, the Scrum master, and the
 development team.
 Each of these roles has specific responsibilities, and together they ensure that the Scrum
 process runs smoothly and that the product development aligns with the overall business
@@ -322,9 +322,9 @@ objectives.
     balance the requirements of the business and the technical capabilities of the team,
     ensuring that the highest-value items are worked on first.
 
-\paragraph{Scrum master} The scrum master acts as a facilitator and coach for the Scrum team,
+\paragraph{Scrum master} The Scrum master acts as a facilitator and coach for the Scrum team,
     ensuring that the team adheres to the Scrum framework and agile principles. Unlike a
-    traditional project manager, the Scrum Master is not responsible for managing the team
+    traditional project manager, the Scrum master is not responsible for managing the team
     directly but for enabling them to perform optimally by removing impediments and
     fostering a self-organizing culture\nocite{cobb2015scrum}.
 
@@ -332,12 +332,12 @@ objectives.
     responsible for delivering potentially shippable product increments at the end of each
     sprint. The team is self-managing, meaning they decide how to achieve their goals
     within the sprint. The team should be small enough to remain nimble but large enough
-    to complete meaningful work\nocite{rubin2012sprints}. The Development Team works
+    to complete meaningful work\nocite{rubin2012sprints}. The development team works
     collaboratively and takes collective responsibility for the outcome of the sprint.
 
 \subsection{Sprints and backlog}
 
-A Sprint is the basic unit of work in Scrum, as presented in \cref{fig:scrum}. Sprints
+A sprint is the basic unit of work in Scrum, as presented in \cref{fig:scrum}. Sprints
 are time-boxed iterations, usually lasting between one to four weeks, during which a
 defined amount of work is completed. The goal is to deliver a potentially shippable
 product increment at the end of each sprint. Sprints are continuous, with no breaks in
@@ -366,7 +366,7 @@ between, fostering a regular, predictable rhythm of work\nocite{cobb2015scrum}.
 
       \node[font=\footnotesize] at (5.2, -0.5) {sprint};
 
-      \node[align=center, label=above:scrum master] (sm) at (4.2, 0.8) {\faUser};
+      \node[align=center, label=above:Scrum master] (sm) at (4.2, 0.8) {\faUser};
 
       \draw[-Stealth, very thick] (6, -1.5) -- (7, -1.5);
 
@@ -396,7 +396,7 @@ be worked on. The work for the sprint is selected from the product backlog, whic
 prioritized list of features, enhancements, bug fixes, and other deliverables necessary
 for the product\nocite{schwaber2020scrum}. The product backlog is dynamic and evolves as
 new requirements and changes emerge. The items selected for the sprint become part of the
-Sprint Backlog, a subset of the product backlog that the Development Team commits to
+sprint backlog, a subset of the product backlog that the development team commits to
 completing during the sprint.
 
 At the heart of the Scrum process is the daily scrum (or stand-up meeting), a brief
@@ -404,7 +404,7 @@ meeting where the team discusses progress toward the sprint goal, any obstacles 
 facing, and their plans for the next day. This daily inspection ensures that everyone
 stays aligned and can quickly adapt to any changes or challenges\nocite{cobb2015scrum}.
 
-The burn down/up chart is a visual tool widely used during the Sprint to track the Scrum
+The burn down/up chart is a visual tool widely used during the sprint to track the Scrum
 team's progress against the planned tasks. It displays the amount of remaining work (in
 hours or story points) over time, allowing the team and the product owner to monitor
 whether the work is on pace to be completed by the end of the sprint. The chart's line
@@ -417,7 +417,7 @@ proactive work management.
 At the end of each sprint, the team holds a sprint review, during which they demonstrate
 the work completed during the sprint. The sprint review is an opportunity for stakeholders
 to see progress and provide feedback, which may lead to adjustments in the Product
-Backlog. Following the review, the team conducts a Sprint Retrospective to discuss what
+Backlog. Following the review, the team conducts a sprint retrospective to discuss what
 went well, what didn't, and how they can improve their processes moving forward%
 \nocite{rubin2012sprints}. These continuous improvement cycles are key to Scrum's success,
 allowing teams to adapt both their work and their working methods iteratively.
@@ -552,7 +552,7 @@ maintains the backlog aligned with the business goals.  He is the one that trans
 business goals into technical requirements.
 
 \paragraph{Lead data scientist}  The lead data scientist is the one that sets and executes
-the analytic strategy.  Like the scrum master, he is the one that leads the development
+the analytic strategy.  Like the Scrum master, he is the one that leads the development
 team.
 
 \paragraph{Data science team}  The data science team is the development team.  It includes
