--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,6 +1,9 @@
 \chapter{Model evaluation}
 \label{chap:evaluation}
 
+\chapterprecishere{But if we judged ourselves truly, we would not be judged.
+  \par\raggedleft--- \textup{1 Corinthians 11:31} (ESV)}
+
 One fundamental step in the development of a data driven solution for a task is the
 evaluation of the model. This chapter presents strategies to measure performance of
 classifiers and regressors, and how to interpret the results.
