--- a/preprocess.tex
+++ b/preprocess.tex
@@ -1,5 +1,8 @@
 \chapter{Data preprocessing}
 
+\chapterprecishere{I find your lack of faith disturbing.
+  \par\raggedleft--- \textup{Darth Vader}, Star Wars: Episode IV -- A New Hope (1977)}
+
 \section{Data handling pipeline}
 
 Before we study the data handling tasks, we need to understand that a data handling
