--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage{blkarray}
 \usepackage[colorlinks]{hyperref}
 \usepackage{fontspec}
+\usepackage{xltxtra}
 \usepackage{sourcesanspro}
 \usepackage{unicode-math}
 \usepackage{graphicx}
@@ -255,17 +256,21 @@
 
 {
   \footnotesize\noindent\color{red}
-  \textbf{Disclaimer:} This version is a work in progress.  Many parts of the book have
+  \textbf{Disclaimer:} This version is a work in progress.  Parts of the book have
   been drafted with the help of \href{https://github.com/features/copilot}{GitHub Copilot}
-  and may not be revised yet by the author.  The author is not responsible for any
-  misinformation contained in this version of the book.
+  and may not be revised yet by the author.
 }
 
 \vspace{0.5cm}
 {
 \footnotesize\noindent
+The book is typeset with \XeTeX{} using the \texttt{memoir} class.  All figures are
+original and created with \texttt{TikZ}.  Proudly written in
+\href{https://neovim.io/}{Neovim} with the assistance of
+\href{https://github.com/features/copilot}{GitHub Copilot}.
 Book cover image was created with the assistance of
 \href{https://gemini.google.com}{Gemini} and \href{https://openai.com/dall-e-2}{DALL·E 2}.
+We use the beautifule \href{https://www.stixfonts.org/}{STIX fonts} for text and math.
 }
 
 \vspace{0.5cm}
