--- a/data.tex
+++ b/data.tex
@@ -402,8 +402,8 @@ mathematics, we call the premises and accepted facts as axioms.  Corollaries,
 lemmas, and theorems are the results of the reasoning process.}.
 
 Deductive reasoning is the process of deriving a conclusion (or new knowledge) from
-a set of previous knowledge.  Deductive reasoning, thus, enables us to infer general
-rules from general rules.
+a set of previous knowledge.  Deductive reasoning, thus, enables us to infer
+generalization rules from generalization rules.
 
 Important figures that bridged the gap between philosophy and mathematics are
 René Descartes (1596 -- 1650) and Gottfried Wilhelm Leibniz (1646 -- 1716).  Descartes
@@ -415,7 +415,7 @@ influenced the development of calculus, Boolean algebra, and many other fields.
 Once we have collected and stored the data, we need to extract knowledge from them.
 Knowledge extraction is the process of obtaining knowledge from data.  The reasoning
 principle here is inductive reasoning.  Inductive reasoning is the process of deriving
-general rules from specific observations.  Inductive reasoning and data analysis
+generalization rules from specific observations.  Inductive reasoning and data analysis
 are closely related.  Refer to \cref{sub:time-analysis} for a timeline of the development
 of data analysis.
 
