--- a/glossary.tex
+++ b/glossary.tex
@@ -32,4 +32,11 @@
     set in any way or to train the model.}
 }
 
+\newglossaryentry{model}{%
+  name=model,
+  description={%
+    A general function that can be used to estimate the relationship between the
+    input and output variables in a dataset.}
+}
+
 \makeglossaries
