--- a/project.tex
+++ b/project.tex
@@ -441,7 +441,7 @@ many other adaptations to Scrum have been described in literature.  For example,
 \fullcite{Saltz2019,Baijens2020,Kraut2022}.}.
 
 One of my major concerns in the proposal of the extension is that data science projects
-usually involve ``data scientists'' that are primarily developers, but statisticians or
+usually involve ``data scientists'' that are not primarily developers, but statisticians or
 domain-experts.  They usually do not ``hacking-level'' skills, and they often do not know
 good practices of software development.
 
@@ -459,6 +459,13 @@ mining process, i.e. it does not explicitly address user interface or data colle
 delegates the software development to the operations role, barely mentioning it.  Scrum is
 a good framework for software development, but it is not designed for data science
 projects.  For instance, it lacks the exploratory phases of data science projects.
+
+For the sake of this book, we focus on the inductive approach to data science projects.
+Inductive reasoning is the process of making generalizations based on individual
+observations.  In our case, it means that we develop components (generalization) of the
+software based on the data (individual observations).  Such a component is the
+\gls{model}. For deeper discussion on the inductive approach, refer to
+\cref{sub:knowledge,chap:slt}.
 
 Thus, we propose an extension to Scrum that makes it suitable for data science projects.
 The extension is based on the following observations:
